<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">到 啦</string>
    <string name="action_settings">Settings</string>
    <string name="personal_infor">个人信息</string>
    <string name="record">考勤记录</string>
    <string name="work">日志</string>
    <string name="home_page">考勤</string>
    
    <string name="prompt">默认为学号</string>
    <string name="Registered_account">注册帐号</string>
    <string name="promptPassword">默认为身份证号</string>
    <string name="Forget_password">忘记密码</string>
    <string name="remember_me">记住我</string>
    <string name="auto_login">自动登录</string>
    <string name="enter">登&#160;录</string>
    
    <string name="logo_annotation">我 到 啦 </string>
    <string name="department_name">技术部</string>
    <string name="full_name">恬美周</string>
    
    <string name="employee_number">学号：</string>
    <string name="number">000000000000</string>
    <string name="department">实习单位</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="sex_name">男</string>
    <string name="phone">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;机</string>
    <string name="phone_number">12345678912</string>
    <string name="ID_card">身份证号</string>
    <string name="ID_number">123445677896541236</string>
    <string name="position">实习位置</string>
    <string name="traince_content">实习内容</string>
    <string name="modify_password">修改密码</string>
    
    <string name="success">打卡成功</string>
    <string name="success_time">时间</string>
    <string name="success_position">地点</string>
    
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="ok">确&#160;&#160;&#160;&#160;&#160;&#160;&#160;定</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

</resources>