<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_page_margin"
        android:layout_marginLeft="@dimen/home_page_margin"
        android:layout_marginBottom="@dimen/home_page_margin"
        android:layout_marginRight="@dimen/home_page_margin"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <ImageView 
            android:id="@+id/image_head_personal_infor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/home_page_margin"
            android:src="@drawable/head" />
        
        <TableLayout 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/home_page_margin"
            android:gravity="center"
            android:orientation="vertical" >
            
            <TableRow 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/home_page_margin_small"
                android:gravity="center" >
                
                <TextView 
                    android:id="@+id/name_personal_infor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textSize="@dimen/text_size_medium"/>
                
            </TableRow>
            
            <TableRow 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_page_margin_small"
                android:gravity="center" >
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_number"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_size_normal"/>
                <TextView 
                    android:id="@+id/student_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_size_normal"/>
                
            </TableRow>
            
        </TableLayout>
        
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/home_page_margin"
        android:layout_marginBottom="@dimen/home_page_margin"
        android:layout_marginRight="@dimen/home_page_margin"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/register_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/home_page_margin"
                android:text="@string/department"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/department_personal_infor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department_name"
                android:textSize="@dimen/text_size_normal" />
            
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/register_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/home_page_margin"
                android:text="@string/sex"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex_name" />
            
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/register_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/home_page_margin"
                android:text="@string/ID_card"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/id_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ID_number" />
            
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/register_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/home_page_margin"
                android:text="@string/phone"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />
            
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/register_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/home_page_margin"
                android:text="@string/position"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:text="@string/position" />
            
            <Button 
                android:id="@+id/location_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_check"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/register_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/home_page_margin"
                android:text="@string/traince_content"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traince_content" />
            
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_personal_infor"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/register"
        android:text="@string/modify_password"
        android:textColor="@color/white"
        android:textSize="@dimen/register_size" />

</LinearLayout>