<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical" >
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/home_page_margin"
        android:src="@drawable/success"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/home_page_margin"
        android:text="@string/success"
        android:textSize="@dimen/text_size_medium"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_page_margin"
        android:gravity="center"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_page_margin_small"
                android:layout_marginRight="@dimen/home_page_margin_small"
                android:text="@string/success_time"
                android:textSize="@dimen/text_size_normal"/>
            
            <TextView 
                android:id="@+id/date_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_page_margin_small"
                android:textSize="@dimen/text_size_normal"/>
            
        </LinearLayout>
        
        <TextView 
            android:id="@+id/time_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_large"/>
            
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_page_margin_small"
                android:layout_marginRight="@dimen/home_page_margin_small"
                android:text="@string/success_position"
                android:textSize="@dimen/text_size_normal"/>
            
            <TextView 
                android:id="@+id/position_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_page_margin_small"
                android:text="成都市  高新区"
                android:textSize="@dimen/text_size_normal"/>
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
